# django-shop

./: .env.example  .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
myshop/: manage.py
myshop/cart/: apps.py  cart.py  context_processors.py  forms.py  urls.py  views.py
myshop/cart/templates/cart/: detail.html
myshop/cart/tests/: test_context_processors.py  test_forms.py  test_urls.py  test_views.py
myshop/core/: models.py
myshop/coupons/: admin.py  apps.py  models.py  urls.py  views.py
myshop/coupons/migrations/: 0001_initial.py  0002_coupon_created_coupon_updated.py
myshop/coupons/tests/: tests_models.py
myshop/locale/en/LC_MESSAGES/: django.po
myshop/locale/es/LC_MESSAGES/: django.po
myshop/myshop/: asgi.py  celery.py  settings.py  urls.py
myshop/orders/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
myshop/orders/migrations/: 0001_initial.py  0002_order_stripe_id.py  0003_order_coupon_order_discount.py  0004_alter_order_address_alter_order_city_and_more.py
myshop/orders/tests/: test_forms.py  test_models.py  test_urls.py  test_views.py
myshop/payment/: apps.py  urls.py  views.py  webhooks.py
myshop/payment/templates/payment/: process.html
myshop/shop/: admin.py  models.py  recommender.py  urls.py  views.py
myshop/shop/migrations/: 0001_initial.py  0002_category_created_category_updated_product.py  0003_alter_product_image.py  0004_product_description.py  0005_categorytranslation_producttranslation_and_more.py
myshop/shop/tests/: test_models.py  test_urls.py  test_views.py
(+8 files in other folders)
